mysys/charset-def.c
@@ -43,6 +43,7 @@ extern struct charset_info_st my_charset_ucs2_roman_uca_ci;
 extern struct charset_info_st my_charset_ucs2_persian_uca_ci;
 extern struct charset_info_st my_charset_ucs2_esperanto_uca_ci;
 extern struct charset_info_st my_charset_ucs2_hungarian_uca_ci;
+extern struct charset_info_st my_charset_ucs2_croatian_mysql561_uca_ci;
 extern struct charset_info_st my_charset_ucs2_sinhala_uca_ci;
 extern struct charset_info_st my_charset_ucs2_croatian_uca_ci;
 #endif
@@ -68,6 +69,7 @@ extern struct charset_info_st my_charset_utf32_roman_uca_ci;
 extern struct charset_info_st my_charset_utf32_persian_uca_ci;
 extern struct charset_info_st my_charset_utf32_esperanto_uca_ci;
 extern struct charset_info_st my_charset_utf32_hungarian_uca_ci;
+extern struct charset_info_st my_charset_utf32_croatian_mysql561_uca_ci;
 extern struct charset_info_st my_charset_utf32_sinhala_uca_ci;
 extern struct charset_info_st my_charset_utf32_croatian_uca_ci;
 #endif /* HAVE_CHARSET_utf32 */
@@ -93,6 +95,7 @@ extern struct charset_info_st my_charset_utf16_roman_uca_ci;
 extern struct charset_info_st my_charset_utf16_persian_uca_ci;
 extern struct charset_info_st my_charset_utf16_esperanto_uca_ci;
 extern struct charset_info_st my_charset_utf16_hungarian_uca_ci;
+extern struct charset_info_st my_charset_utf16_croatian_mysql561_uca_ci;
 extern struct charset_info_st my_charset_utf16_sinhala_uca_ci;
 extern struct charset_info_st my_charset_utf16_croatian_uca_ci;
 #endif  /* HAVE_CHARSET_utf16 */
@@ -118,6 +121,7 @@ extern struct charset_info_st my_charset_utf8_roman_uca_ci;
 extern struct charset_info_st my_charset_utf8_persian_uca_ci;
 extern struct charset_info_st my_charset_utf8_esperanto_uca_ci;
 extern struct charset_info_st my_charset_utf8_hungarian_uca_ci;
+extern struct charset_info_st my_charset_utf8_croatian_mysql561_uca_ci;
 extern struct charset_info_st my_charset_utf8_sinhala_uca_ci;
 extern struct charset_info_st my_charset_utf8_croatian_uca_ci;
 #ifdef HAVE_UTF8_GENERAL_CS
@@ -145,6 +149,7 @@ extern struct charset_info_st my_charset_utf8mb4_roman_uca_ci;
 extern struct charset_info_st my_charset_utf8mb4_persian_uca_ci;
 extern struct charset_info_st my_charset_utf8mb4_esperanto_uca_ci;
 extern struct charset_info_st my_charset_utf8mb4_hungarian_uca_ci;
+extern struct charset_info_st my_charset_utf8mb4_croatian_mysql561_uca_ci;
 extern struct charset_info_st my_charset_utf8mb4_sinhala_uca_ci;
 extern struct charset_info_st my_charset_utf8mb4_croatian_uca_ci;
 #endif /* HAVE_CHARSET_utf8mb4 */
@@ -235,6 +240,7 @@ my_bool init_compiled_charsets(myf flags __attribute__((unused)))
   add_compiled_collation(&my_charset_ucs2_persian_uca_ci);
   add_compiled_collation(&my_charset_ucs2_esperanto_uca_ci);
   add_compiled_collation(&my_charset_ucs2_hungarian_uca_ci);
+  add_compiled_collation(&my_charset_ucs2_croatian_mysql561_uca_ci);
   add_compiled_collation(&my_charset_ucs2_sinhala_uca_ci);
   add_compiled_collation(&my_charset_ucs2_croatian_uca_ci);
 #endif
@@ -273,6 +279,7 @@ my_bool init_compiled_charsets(myf flags __attribute__((unused)))
   add_compiled_collation(&my_charset_utf8_persian_uca_ci);
   add_compiled_collation(&my_charset_utf8_esperanto_uca_ci);
   add_compiled_collation(&my_charset_utf8_hungarian_uca_ci);
+  add_compiled_collation(&my_charset_utf8_croatian_mysql561_uca_ci);
   add_compiled_collation(&my_charset_utf8_sinhala_uca_ci);
   add_compiled_collation(&my_charset_utf8_croatian_uca_ci);
 #endif
@@ -303,6 +310,7 @@ my_bool init_compiled_charsets(myf flags __attribute__((unused)))
   add_compiled_collation(&my_charset_utf8mb4_persian_uca_ci);
   add_compiled_collation(&my_charset_utf8mb4_esperanto_uca_ci);
   add_compiled_collation(&my_charset_utf8mb4_hungarian_uca_ci);
+  add_compiled_collation(&my_charset_utf8mb4_croatian_mysql561_uca_ci);
   add_compiled_collation(&my_charset_utf8mb4_sinhala_uca_ci);
   add_compiled_collation(&my_charset_utf8mb4_croatian_uca_ci);
 #endif /* HAVE_UCA_COLLATIONS  */
@@ -335,6 +343,7 @@ my_bool init_compiled_charsets(myf flags __attribute__((unused)))
   add_compiled_collation(&my_charset_utf16_persian_uca_ci);
   add_compiled_collation(&my_charset_utf16_esperanto_uca_ci);
   add_compiled_collation(&my_charset_utf16_hungarian_uca_ci);
+  add_compiled_collation(&my_charset_utf16_croatian_mysql561_uca_ci);
   add_compiled_collation(&my_charset_utf16_sinhala_uca_ci);
   add_compiled_collation(&my_charset_utf16_croatian_uca_ci);
 #endif /* HAVE_UCA_COLLATIONS */
@@ -365,6 +374,7 @@ my_bool init_compiled_charsets(myf flags __attribute__((unused)))
   add_compiled_collation(&my_charset_utf32_persian_uca_ci);
   add_compiled_collation(&my_charset_utf32_esperanto_uca_ci);
   add_compiled_collation(&my_charset_utf32_hungarian_uca_ci);
+  add_compiled_collation(&my_charset_utf32_croatian_mysql561_uca_ci);
   add_compiled_collation(&my_charset_utf32_sinhala_uca_ci);
   add_compiled_collation(&my_charset_utf32_croatian_uca_ci);
 #endif /* HAVE_UCA_COLLATIONS */
